First working version of an income mountain in the family view. ToDo: 1) need to offset the income mountain a bit (to the right) to match the “sidewalk” 2) the query for gini etc right now always fetched Burundi data because Dollar Street does not have country codes, only country names and I haven’t figured out how to fetch data from the waffle server by country name. Probably easy. 3) It uses a fixed “income family size”, to move from per capita to per family income.  It would be better to use some country average. 4) Couple (two) Typescript compilation errors, that however don’t prevent it from running. 5) No tests written or anything like that…. 6) That second dashed line is in the code, but it’s probably a bug ? 7) Room for structural improvements, i.e. to move the income mountain code into one or more components, to wrap the WsReader into an Angular service, etc.

--- a/src/shared/street-family/street-family.component.css
+++ b/src/shared/street-family/street-family.component.css
@@ -7,8 +7,21 @@
 .street-family-box-container svg {
   position: relative;
   width: 100%;
-  height: 65px;
+  height: 100px;
   vertical-align: top;
+}
+
+svg path.america {
+  fill: #11ee11;
+}
+svg path.africa {
+  fill: #11eeee;
+}
+svg path.asia {
+  fill: #ee1111;
+}
+svg path.europe {
+  fill: #1111ee;
 }
 
 @media (max-width: 1023px) {
